force-app/main/default/objects/BEAT_Alert__c/fields/Alert_Type__c.field-meta.xml
<CustomField>
    <fullName>Alert_Type__c</fullName>
    <label>Alert Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INFO</fullName>
                <label>Info</label>
            </value>
            <value>
                <fullName>WARNING</fullName>
                <label>Warning</label>
            </value>
            <value>
                <fullName>ERROR</fullName>
            </value>
            <value>
                <fullName>FATAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>