force-app/main/default/objects/BEAT_Alert__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Campaign.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>BEAT_Event</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>BEAT Alerts</relationshipLabel>
    <relationshipName>BEAT_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>